# python_study

./: .gitignore  argvs.py  fileio_sample.py  ftp_download.py  get_datetime.py  image_display.ipynb  json_sample.py  path_split.py  pyproject.toml  readme.md  restApi_req.py  restApi_serveri.py  serialPort.py  time_date.ipynb  trycatch.py  type_check.py
LLM/: .gitignore
PIL/: 1_basic.py  2.opencv.ipynb  2_opencv.py  3.draw.ipynb  3_draw.py  4.resize.ipynb  4_resize.py  5.imgslice.py  readme.md
pytorch_study/: .gitignore  dataset_100_test.csv  dataset_100_train.csv  ex00_gpu_check.py  ex01_tensor.py  ex02_grad.py  ex02_grad_2.py  ex03_backpropa.py  ex05_grad_dec_torch.py  ex06_loss_fn.py  ex06_optimizer.py  ex07_linear_model.py  ex07_linear_model_2_1.py  ex08.py  ex08_crossentropy.py  ex08_linear_reg.py  ex08_logitics_reg.py  ex08_softmax.py  ex10_dataloader.py  ex11_softmax.py  ex99_tensorboard.py  linear_reg_datagen.py  main.py  pyproject.toml  readme.md
pytorch_study/basic/: ex01_regress.py  ex02_or.py
pytorch_study/data/: regress.csv
pytorch_study/linear_model/: ex07_linear_pandas.py  linear_model_basic_02.py  linear_model_normalize.py
pytorch_study/linear_model/logitics_reg/: datagen.py  pass_dataset.csv  pass_solution.py  solution.py
pytorch_study/linear_model/mpg_type/: auto_mpg_exam_dataset.csv  mpg_gen_dataset.py  mpg_solution.py
pytorch_study/sigmoid/: ex01_sigmoid.py  ex02_softmax.py  ex03_lelu.py  ex08.py  ex08_crossentropy.py  logitics_model_basic.py
tinker_tutorial/: ex01_pack.py  ex02_btn.py  ex03_canvas.py  main.py  pyproject.toml  readme.md
tinker_tutorial/UI/: ex01.ui
tinker_tutorial/opencv/: ex02.py
(+481 files in other folders)
